Snake can eat all pieces

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Loading Split</title>
+<title>Snake</title>
 
 <link rel="stylesheet" type="text/css" href="styles.css" />
 
@@ -10,13 +10,17 @@
 
 <body>
 		
-	<div id="totalPieces"></div>
+	<div>
+		<div id="totalPieces"></div>
+		<div>Use the arrow keys to move the snake and catch the pieces</div>
+		<div id="info"></div>
+	</div>
 	<div id="area">
-		<div id="piece"></div>
+		<div id="piece" class="piece-cfg"></div>
 		<div id="add-piece"></div>
 	</div>
 	
-<script src="code.js"></script>
+	<script src="code.js"></script>
 
 </body>
 </html>
