Add graphic ellements

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 
 <body>
 		
-	<div>
-		<div id="totalPieces"></div>
-		<div>Use the arrow keys to move the snake and catch the pieces</div>
-		<div id="info"></div>
+	<div class="main-div">
+		<div id="area">
+			<div id="piece" class="piece-cfg left"></div>
+			<div id="add-piece"></div>
+		</div>
 	</div>
-	<div id="area">
-		<div id="piece" class="piece-cfg"></div>
-		<div id="add-piece"></div>
-	</div>
-	
+
+	<div id="totalPieces"></div>
+	<div>Use the arrow keys to move the snake and catch the pieces</div>
+	<div id="info"></div>
+
 	<script src="code.js"></script>
 
 </body>
