--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <title>Snake</title>
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P">
 <link rel="stylesheet" type="text/css" href="styles.css" />
 
 </head>
@@ -18,7 +19,7 @@
 	</div>
 
 	<div id="totalPieces"></div>
-	<div>Use the arrow keys to move the snake and catch the pieces</div>
+	<div id="description">Use the arrow keys to move the snake and catch the pieces</div>
 	<div id="info"></div>
 
 	<script src="code.js"></script>
